<resources>
    <string name="app_name">Janitory</string>
    <string name="title">Zeladoria urbana</string>
    <string name="anonymous_btn">Realizar ocorrência anônima</string>
    <string name="authenticated_btn">Realizar ocorrência autenticada</string>
    <string name="category_selection">Selecione uma categoria</string>
    <string name="duty_selection">Selecione o serviço abaixo</string>
    <string name="back">Retornar</string>
    <string name="call_form_title">Formulário de solicitação</string>
    <string name="duty_field_label">Motivação do serviço</string>
    <string name="address_field_label">Endereço</string>
    <string name="gps_switch_label">Ativar GPS</string>
    <string name="zip_code_field_label">Cep</string>
    <string name="district_field_label">Bairro</string>
    <string name="pub_place_field_label">Logradouro</string>
    <string name="number_field_label">Número</string>
    <string name="ref_field_label">Referência</string>
    <string name="description_field_label">Descrição</string>
    <string name="description_field_hint">Descreva os detalhes da ocorrência aqui</string>
    <string name="image_label">Imagem</string>
    <string name="add_image_btn">Adicionar Imagem</string>
    <string name="remove_image_btn">Remover Imagem</string>
    <string name="send_form_btn">Enviar formulário</string>
</resources>