<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.CallFormActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6C6C6C"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleCentered="true">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_btn"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:backgroundTint="#6C6C6C"
                android:contentDescription="@string/back"
                app:iconSize="30sp"
                app:iconTint="@color/white"
                app:iconGravity="textStart"
                app:icon="@drawable/ic_left_arrow"/>

            <TextView
                android:id="@+id/category_selected"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingVertical="10sp"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/call_form_title"/>

        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:id="@+id/form_body"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_marginTop="15sp"
                    android:textSize="26sp"
                    android:text="@string/duty_field_label"/>

            <TextView
                    android:id="@+id/duty_form_field"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginHorizontal="10sp"
                    android:layout_marginVertical="10sp"
                    android:background="@drawable/bg_warning"
                    android:paddingVertical="10sp"
                    android:shadowRadius="5"
                    android:text="@string/duty_field_label"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="10sp"
                android:textSize="26sp"
                android:text="@string/address_field_label"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:labelFor="@+id/zip_code_form_field"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/zip_code_field_label"
                            android:inputType="number"
                            android:id="@id/zip_code_form_field"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:labelFor="@+id/districts"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <!-- Todo onClick popup a list of districts-->
                    <AutoCompleteTextView
                        android:id="@+id/districts"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:text="@string/district_field_label"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:labelFor="@+id/pub_place_form_field"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/pub_place_field_label">

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:id="@+id/pub_place_form_field"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:labelFor="@+id/address_num_form_field"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="10sp"
                    android:hint="@string/number_field_label">
                    <!-- Todo onClick popup a form with no number checkbox -->
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
                            android:id="@+id/address_num_form_field"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:labelFor="@+id/address_ref_form_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ref_field_label">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:id="@+id/address_ref_form_field"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="15sp"
                android:textSize="15sp"
                android:text="@string/description_field_label"/>
            <!-- Todo onClick popup a form with a big textarea -->
            <EditText
                android:id="@+id/description_form_field"
                android:layout_width="match_parent"
                android:layout_weight="8"
                android:layout_height="0dp"
                android:inputType="textMultiLine"
                android:lines="4"
                android:textSize="32sp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/description_field_hint"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10sp"
                android:layout_marginTop="15sp"
                android:textSize="26sp"
                android:text="@string/image_label"/>

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:visibility="gone"
                android:contentDescription="@string/image_label"/>

            <Button
                android:id="@+id/add_image_btn"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_margin="15sp"
                android:textSize="25sp"
                android:backgroundTint="#117711"
                android:layout_weight="1"
                android:text="@string/add_image_btn"/>

            <Button
                android:id="@+id/remove_image_btn"
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_margin="15sp"
                android:textSize="25sp"
                android:visibility="gone"
                android:backgroundTint="#BE0000"
                android:layout_weight="1"
                android:text="@string/remove_image_btn"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/form_footer"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <Button
            android:id="@+id/send_form_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="5sp"
            android:layout_marginHorizontal="15sp"
            android:textSize="25sp"
            android:enabled="false"
            android:backgroundTint="#2A68AA"
            android:text="@string/send_form_btn"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>