<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/wpp_city"
        tools:context=".ui.activities.MainActivity">

    <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="102dp"
            android:layout_margin="52dp"
            android:background="@drawable/bg_title"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="42sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.26"/>

    <Button
            android:id="@+id/anonymous_btn"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="52dp"
            android:backgroundTint="@color/badge_background"
            android:text="@string/anonymous_btn"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:iconSize="54sp"
            app:iconTint="@color/black"
            app:icon="@drawable/ic_anonymous"
            app:layout_constraintBottom_toTopOf="@+id/authenticated_btn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/authenticated_btn"
            android:layout_width="wrap_content"
            android:layout_height="88dp"
            android:layout_marginBottom="92dp"
            android:text="@string/authenticated_btn"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:backgroundTint="@color/badge_background"
            app:iconSize="54sp"
            app:iconTint="@color/black"
            app:icon="@drawable/ic_authenticated"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

</LinearLayout>